[package]
name = "artloop"
version = "0.0.1"
authors = ["Zach Krall"]
edition = "2018"
license = "MIT"

description = "artloop is a command-line interface that cycles through all applications within a folder on a timed interval for art installations."
documentation = "https://github.com/zachkrall/artloop"
homepage = "https://github.com/zachkrall/artloop"
repository = "https://github.com/zachkrall/artloop"
readme = "README.md"
keywords = ["art","display","slideshow","cli"]
categories = ["command-line-utilities"]

exclude = [
    "bin/*",
    "dist/*",
    "images/*",
    "package.json",
    "package-lock.json",
    "node_modules/*",
    "npm/*"
]

[dependencies]
glob = "0.3.0"
clap = "2"
